<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>amr_bringup_pkg</name>
    <version>0.0.0</version>
    <description>AMR Bringup Package</description>
    <maintainer email="user@todo.todo">user</maintainer>
    <license>TODO: License declaration</license>

    <depend>ros_gz_sim</depend>
    <depend>teleop_twist_keyboard</depend>
    <depend>amr_sim_pkg</depend>

    <test_depend>ament_copyright</test_depend>
    <test_depend>ament_flake8</test_depend>
    <test_depend>ament_pep257</test_depend>
    <test_depend>python3-pytest</test_depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>